<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KeyboardFragment">

    <LinearLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Keyboard">

        <LinearLayout
            android:id="@+id/textButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:text="@string/instruction"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:gravity="center"/>
        </LinearLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="6"
            android:rowCount="5">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/a"
                />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/b" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/c" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/d" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/e" />

            <Button
                android:id="@+id/buttonF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/f" />

            <Button
                android:id="@+id/buttonG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/g" />

            <Button
                android:id="@+id/buttonH"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/h" />

            <Button
                android:id="@+id/buttonI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/i" />

            <Button
                android:id="@+id/buttonJ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/j" />

            <Button
                android:id="@+id/buttonK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/k" />

            <Button
                android:id="@+id/buttonL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/l" />

            <Button
                android:id="@+id/buttonM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/m" />

            <Button
                android:id="@+id/buttonN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/n" />

            <Button
                android:id="@+id/buttonO"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/o" />

            <Button
                android:id="@+id/buttonP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/p" />

            <Button
                android:id="@+id/buttonQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/q" />

            <Button
                android:id="@+id/buttonR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/r" />

            <Button
                android:id="@+id/buttonS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/s" />

            <Button
                android:id="@+id/buttonT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/t" />

            <Button
                android:id="@+id/buttonU"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/u" />

            <Button
                android:id="@+id/buttonV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/v" />

            <Button
                android:id="@+id/buttonW"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/w" />

            <Button
                android:id="@+id/buttonX"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/x" />

            <Button
                android:id="@+id/buttonY"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/y" />

            <Button
                android:id="@+id/buttonZ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="3dp"
                android:text="@string/z" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_marginLeft="10dp"
                android:id="@+id/hintbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/hinttext"
                android:layout_width="wrap_content"
                android:textSize="18dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
           />

            <Button
                android:layout_marginRight="10dp"
                android:id="@+id/playAgainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_again"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>



    </LinearLayout>

</FrameLayout>